--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.3
   font_awesome_flutter: ^10.5.0
-  get: ^4.6.5
+  go_router: ^10.0.0
+  google_fonts: ^5.1.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -61,11 +62,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: GT Sectra Fine Regular
+      fonts:
+        - asset: assets/fonts/GT Sectra Fine Regular.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
