--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,16 +28,19 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cached_network_image: ^3.2.3
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
-  dio: ^5.3.2
+  dio: ^4.0.6
   equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
   font_awesome_flutter: ^10.5.0
+  get_it: ^7.6.0
   go_router: ^10.0.0
   google_fonts: ^5.1.0
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
